@@ -225,6 +225,20 @@ Optionen:
 | Option                                      | Beschreibung                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
 +=============================================+========================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================+
 | ``--config  filename``                      | Konfiguriert die Datenprüfung mit Hilfe einer INI-Datei.                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
+|                                             | ``filename`` kann auch die Form ``ilidata:DatesetId``  haben,                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+|                                             | dann wird die entsprechende Datei aus den Repositories benutzt.                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+|                                             |	Der Eintrag im ilidata.xml soll mit folgenden Kategorien markiert werden.                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+|                                             |	                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+|                                             |	.. code:: xml                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+|                                             |	                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+|                                             |	     <categories>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+|                                             |	       <DatasetIdx16.Code_>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+|                                             |	         <value>http://codes.interlis.ch/type/ilivalidatorconfig</value> <!-- Hinweis, dass es eine ilivalidator Config-Datei ist.  -->                                                                                                                                                                                                                                                                                                                                                                                                |
+|                                             |	       </DatasetIdx16.Code_>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+|                                             |	       <DatasetIdx16.Code_>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+|                                             |	         <value>http://codes.interlis.ch/model/Simple23</value> <!-- Hinweis auf des ili-Modell Simple23 -->                                                                                                                                                                                                                                                                                                                                                                                                                           |
+|                                             |	       </DatasetIdx16.Code_>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+|                                             |	     </categories>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 |                                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
 +---------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | ``--forceTypeValidation``                   | Ignoriert die Konfiguration der Typprüfung aus der INI-Datei, d.h. es kann nur die Multiplizität aufgeweicht werden.                                                                                                                                                                                                                                                                                                                                                                                                                   |
