@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<TRANSFER xmlns="http://www.interlis.ch/INTERLIS2.3">
+	<HEADERSECTION SENDER="ili2c-4.5.22-20160520" VERSION="2.3">
+		<MODELS>
+			<MODEL NAME="Simple" VERSION="2011-12-22" URI="http://interlis.ch"></MODEL>
+		</MODELS>
+	</HEADERSECTION>
+	<DATASECTION>
+		<Simple.TestA BID="b1">
+			<Simple.TestA.ClassB1 TID="o1">
+			</Simple.TestA.ClassB1>
+		</Simple.TestA>
+	</DATASECTION>
+</TRANSFER>
