@@ -1,0 +1,2 @@
+[Simple.TestA.ClassB1.attr23]
+multiplicity=off
