@@ -20,7 +20,7 @@
 				</dependsOnModel>
 				<Issuer>mailto:ce@eisenhutinformatik.ch</Issuer>
 				<browseOnly>false</browseOnly>
-				<md5>a6262ffd66c7499a4b2848dfd3bf4be0</md5>
+				<md5>48078c53755c0f1e776fd4aac07c9b38</md5>
 			</IliRepository20.RepositoryIndex.ModelMetadata>
 			<IliRepository20.RepositoryIndex.ModelMetadata TID="1">
 				<Name>Simple</Name>
