@@ -43,6 +43,22 @@ public class IliRepositoryTest {
         assertTrue(ret);
     }
     @Test
+    public void xtf23_ConfigFail() {
+        Settings settings=new Settings();
+        settings.setValue(Validator.SETTING_ILIDIRS, "test/data/ilirepository/repos");
+        settings.setValue(Validator.SETTING_CONFIGFILE, "ilidata:config");
+        boolean ret=Validator.runValidation("test/data/ilirepository/Simple23fail.xtf", settings);
+        assertFalse(ret);
+    }
+    @Test
+    public void xtf23_ConfigOk() {
+        Settings settings=new Settings();
+        settings.setValue(Validator.SETTING_ILIDIRS, "test/data/ilirepository/repos");
+        settings.setValue(Validator.SETTING_CONFIGFILE, "ilidata:70340b5a-248c-4216-86e4-32e6a540d629");
+        boolean ret=Validator.runValidation("test/data/ilirepository/Simple23fail.xtf", settings);
+        assertTrue(ret);
+    }
+    @Test
     public void xtf23_extRefFail() {
         Settings settings=new Settings();
         settings.setValue(Validator.SETTING_ALL_OBJECTS_ACCESSIBLE, Validator.TRUE);
