@@ -1,6 +1,7 @@
 LATEST VERSION
 -----------------------------
 - fix unknown --verbose/wrong number of arguments (#365) 
+- support ilidata:datasetId as --config file argument (#290)
 
 ilivalidator 1.12.1 (2022-11-01)
 -----------------------------
